--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nous cours particuljopjpoier</title>
+    <title>Nous cours particulier</title>
     <link rel="stylesheet" href="test.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="#">Appelez-nous </a></li>
                 <li><a href="coursparticulier.html">Cours particulier</a></li>
-                <li><a href="Ressources.html">Ressources</a></li>
+                <li><a href="Ressources.html">Ressoukqôqsrces</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
