--- a/index.html
+++ b/index.html
@@ -3,28 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nous cours particulier</title>
-    <link rel="stylesheet" href="test.css">
+    <title>Nous cours particuliers</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <a href="test.html">  <img src="logo.webp" alt="Logo" width="300" ></a>
+            <a href="index.html">
+                <img src="logo.webp" alt="Logo">
+            </a>
         </div>
         <nav>
             <ul>
-                <li><a href="#">Appelez-nous </a></li>
+                <li><a href="#">Appelez-nous</a></li>
                 <li><a href="coursparticulier.html">Cours particulier</a></li>
-                <li><a href="Ressources.html">Ressoukqôqsrces</a></li>
+                <li><a href="Ressources.html">Ressources</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <div class="image_back">
-        <img src="Réu.png" alt="Logo" width="100">
-    </div>
-    
-</body>
 
-<div>
+    <div class="image_back"></div>
+
+    <section class="cours">
+        <h1>Bienvenue à nos cours particuliers</h1>
+    </section>
+</body>
 </html>
