--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="#">Appelez-nous </a></li>
                 <li><a href="coursparticulier.html">Cours particulier</a></li>
-                <li><a href="Ressources.html">Ressoukqôqsrces</a></li>
+                <li><a href="Ressources.html">Ressources</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
