--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="test.html">  <img src="logo.webp" alt="Logo" width="300" ></a>
+            <a href="index.html">  <img src="logo.webp" alt="Logo" width="300" ></a>
         </div>
         <nav>
             <ul>
