--- a/coursparticulier.html
+++ b/coursparticulier.html
@@ -13,7 +13,7 @@
         </div>
         <nav>
             <ul class="liste">
-                <li><a href="">Appelez-nous </a></li>
+                <li><a href="qui.html">Qui sommes-nous ? </a></li>
                 <li><a href="coursparticulier.html">Cours particulier</a></li>
                 <li><a href="Ressources.html">Ressources</a></li>
                 <li><a href="#">Contact</a></li>
