--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Appelez-nous </a></li>
+                <li><a href="qui.html">Appelez-nous </a></li>
                 <li><a href="coursparticulier.html">Cours particulier</a></li>
                 <li><a href="Ressources.html">Ressources</a></li>
                 <li><a href="#">Contact</a></li>
