--- a/qui.html
+++ b/qui.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nous cours particulier</title>
+    <title>Nous cours particuliers</title>
     <link rel="stylesheet" href="qui.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <a href="test.html">  <img src="logo.webp" alt="Logo" width="300" ></a>
+            <a href="index.html">  <img src="logo.webp" alt="Logo" width="300" ></a>
         </div>
         <nav>
             <ul>
