--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="image_back">
         <img src="Réu.png" alt="Logo" width="100">
     </div>
-    <div class="image_back_phone">
+    <div class="image_phone">
         <img src="Stationery.png" alt="Logo" width="100">
     </div>
     
