--- a/Ressources.html
+++ b/Ressources.html
@@ -27,7 +27,7 @@
         <img src="6ème .png">
         <img src="5ème .png">
         <img src="4ème.png">
-        <a href="3èmeres.html">  <img src="3ème.png"></a>
+        <a href="3èmeres.html"><img src="3eme.png" alt="3ème"></a>
     </div>
    
     </div>
