--- a/3èmeres.html
+++ b/3èmeres.html
@@ -14,7 +14,7 @@
         <nav>
             <ul class="liste">
                 <li><a href="qui.html">Qui sommes-nous ? </a></li>
-                <li><a href="coursparticulier.html">Cours particulier</a></li>
+                <li><a href="coursparticulier.html">Cours particuliers</a></li>
                 <li><a href="Ressources.html">Ressources</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
@@ -24,25 +24,25 @@
 </body>
 <div class="cours">
     <h1>
-    <a href="nombre et calcule 3ème.pdf">nombre entier et rationnels </a>
+    <a href="nombre et calcule 3ème.pdf">nombres entiers et rationnels </a>
     </h1>
     <h1>
         <a href="Calcul littéral.pdf">calcul littéral</a>
     </h1>
     <h1> 
-    Probabilité 
+    Probabilités 
     </h1>
     <h1>
-    fonction
+    fonctions
     </h1>
     <h1>
-        équation et inéquation
+        équations et inéquations
     </h1>
     <h1> 
-        théorème de pythagore
+        Théorème de Pythagore
     </h1>
     <h1> 
-        <a href="Théorème de Thalès.pdf">théorème de Thalès
+        <a href="Théorème de Thalès.pdf">Théorème de Thalès
     </h1>
     <h1>
         Géométrie dans l'espace et géométrie plane
