--- a/qui.html
+++ b/qui.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="qui.html">Qui sommes-nous ? </a></li>
-                <li><a href="coursparticulier.html">Cours particulier</a></li>
+                <li><a href="coursparticulier.html">Cours particuliers</a></li>
                 <li><a href="Ressources.html">Ressources</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
