--- a/3èmeres.html
+++ b/3èmeres.html
@@ -33,7 +33,7 @@
     Probabilités 
     </h1>
     <h1>
-    fonctions
+        <a href="fonction 3ème (2).pdf">Fonctions</a>
     </h1>
     <h1>
         équations et inéquations
