--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
                 <li><a href="qui.html">Appelez-nous </a></li>
                 <li><a href="coursparticulier.html">Cours particulier</a></li>
                 <li><a href="Ressources.html">Ressources</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="Contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     <div class="image_back">
         <img src="Réu.png" alt="Logo" width="100">
+        <img src="Stationery.png" alt="Logo" width="100">
     </div>
     
 </body>
