--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="qui.html">Qui sommes-nous ?</a></li>
                 <li><a href="coursparticulier.html">Cours particuliers</a></li>
                 <li><a href="Ressources.html">Ressources</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="Contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
