--- a/Contact.html
+++ b/Contact.html
@@ -21,3 +21,7 @@
         </nav>
     </header>
  </div>
+    <!-- Début de widget en ligne Calendly -->
+<div class="calendly-inline-widget" data-url="https://calendly.com/patou-karaa/30min?hide_gdpr_banner=1&primary_color=00025e" style="min-width:320px;height:700px;"></div>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+<!-- Fin de widget en ligne Calendly -->
