add image to contact

--- a/Contact.html
+++ b/Contact.html
@@ -22,3 +22,17 @@
     </header>
  </div>
 </body>
+<div class="pres1h">
+            <a href="index.html">  <img src="cours 1h pres.PNG" alt="Logo" width="300" ></a>
+ </div>
+ 
+ <div class="pres2h">
+            <a href="index.html">  <img src="cours 2h pres.PNG" alt="Logo" width="300" ></a>
+ </div>
+ 
+ <div class="visio1h">
+            <a href="index.html">  <img src="cours en ligne 2h.PNG" alt="Logo" width="300" ></a>
+   </div>
+<div class="visio2h">
+            <a href="index.html">  <img src="Cours en ligne 1h.PNG" alt="Logo" width="300" ></a>
+ </div>
