--- a/Contact.html
+++ b/Contact.html
@@ -21,18 +21,18 @@
         </nav>
     </header>
  </div>
-</body>
-<div class="pres1h">
-            <a href="index.html">  <img src="cours 1h pres.PNG" alt="Logo" width="300" ></a>
+ <div class="pres1h">
+            <a href="index.html">  <img src="pres1h.png" alt="tarif" width="300" ></a>
  </div>
  
  <div class="pres2h">
-            <a href="index.html">  <img src="cours 2h pres.PNG" alt="Logo" width="300" ></a>
+            <a href="index.html">  <img src="pres1h.png" alt="tarif" width="300" ></a>
  </div>
  
  <div class="visio1h">
-            <a href="index.html">  <img src="cours en ligne 2h.PNG" alt="Logo" width="300" ></a>
+            <a href="index.html">  <img src="visio1h.png" alt="tarif" width="300" ></a>
    </div>
 <div class="visio2h">
-            <a href="index.html">  <img src="Cours en ligne 1h.PNG" alt="Logo" width="300" ></a>
+            <a href="index.html">  <img src="visio2h.png" alt="tarif" width="300" ></a>
  </div>
+</body>
