--- a/Contact.html
+++ b/Contact.html
@@ -21,18 +21,20 @@
         </nav>
     </header>
  </div>
- <div class="pres1h">
+<div class = "tarifs">
+    <div class="pres1h">
             <a href="index.html">  <img src="pres1h.png" alt="tarif" width="300" ></a>
- </div>
+    </div>
  
- <div class="pres2h">
-            <a href="index.html">  <img src="pres1h.png" alt="tarif" width="300" ></a>
- </div>
+     <div class="pres2h">
+               <a href="index.html">  <img src="pres1h.png" alt="tarif" width="300" ></a>
+    </div>
  
- <div class="visio1h">
+    <div class="visio1h">
             <a href="index.html">  <img src="visio1h.png" alt="tarif" width="300" ></a>
-   </div>
-<div class="visio2h">
+    </div>
+    <div class="visio2h">
             <a href="index.html">  <img src="visio2h.png" alt="tarif" width="300" ></a>
- </div>
+     </div>
+</div>
 </body>
