--- a/pres1h.html
+++ b/pres1h.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nous cours particuliers</title>
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="qui.css">
 </head>
 <body>
     <header>
@@ -12,7 +12,7 @@
             <a href="index.html">  <img src="logo.webp" alt="Logo" width="300" ></a>
         </div>
         <nav>
-            <ul class="liste">
+            <ul>
                 <li><a href="qui.html">Qui sommes-nous ? </a></li>
                 <li><a href="coursparticulier.html">Cours particuliers</a></li>
                 <li><a href="Ressources.html">Ressources</a></li>
@@ -20,21 +20,8 @@
             </ul>
         </nav>
     </header>
- </div>
-<div class = "tarifs">
-    <div class="pres1h">
-            <a href="pres1h.html"><img src="pres1h.png" alt="tarif" width="300" ></a>
-    </div>
- 
-     <div class="pres2h">
-               <a href="pres2h.html">  <img src="pres1h.png" alt="tarif" width="300" ></a>
-    </div>
- 
-    <div class="visio1h">
-            <a href="visio1h.html">  <img src="visio1h.png" alt="tarif" width="300" ></a>
-    </div>
-    <div class="visio2h">
-            <a href="visio2h.html">  <img src="visio2h.png" alt="tarif" width="300" ></a>
-     </div>
-</div>
-</body>
+    <body>
+    <!-- Début de widget en ligne Calendly -->
+<div class="calendly-inline-widget" data-url="https://calendly.com/patou-karaa/30min?primary_color=00025e" style="min-width:320px;height:700px;"></div>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+<!-- Fin de widget en ligne Calendly -->
