--- a/3èmeres.html
+++ b/3èmeres.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nous cours particuliers</title>
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="ressources.css">
 </head>
 <body>
     <header>
