--- a/visio2h.html
+++ b/visio2h.html
@@ -20,4 +20,9 @@
             </ul>
         </nav>
     </header>
+    <!-- Début de widget en ligne Calendly -->
+<div class="calendly-inline-widget" data-url="https://calendly.com/patou-karaa/cours-de-mathematiques-2?primary_color=00025e" style="min-width:320px;height:700px;"></div>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+<!-- Fin de widget en ligne Calendly -->
     <body>
+   
