--- a/pres2h.html
+++ b/pres2h.html
@@ -21,3 +21,7 @@
         </nav>
     </header>
     <body>
+        <!-- Début de widget en ligne Calendly -->
+<div class="calendly-inline-widget" data-url="https://calendly.com/patou-karaa/cours-de-mathematiques?primary_color=00025e" style="min-width:320px;height:700px;"></div>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+<!-- Fin de widget en ligne Calendly -->
